@@ -27,17 +27,13 @@
  */
 package org.hisp.dhis.analytics.table;
 
-import static org.apache.commons.lang3.StringUtils.EMPTY;
-import static org.apache.commons.lang3.StringUtils.SPACE;
-import static org.hisp.dhis.analytics.table.PartitionUtils.getEndDate;
-import static org.hisp.dhis.analytics.table.PartitionUtils.getStartDate;
-import static org.hisp.dhis.analytics.util.AnalyticsIndexHelper.createIndexStatement;
-import static org.hisp.dhis.analytics.util.AnalyticsSqlUtils.getCollation;
-import static org.hisp.dhis.analytics.util.AnalyticsSqlUtils.quote;
+import static org.hisp.dhis.analytics.table.util.PartitionUtils.getEndDate;
+import static org.hisp.dhis.analytics.table.util.PartitionUtils.getStartDate;
 import static org.hisp.dhis.db.model.DataType.CHARACTER_11;
 import static org.hisp.dhis.db.model.DataType.TEXT;
 import static org.hisp.dhis.util.DateUtils.getLongDateString;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -56,17 +52,18 @@ import org.hisp.dhis.analytics.table.model.AnalyticsTable;
 import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.table.setting.AnalyticsTableExportSettings;
+import org.hisp.dhis.calendar.Calendar;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.commons.collection.ListUtils;
 import org.hisp.dhis.commons.timer.SystemTimer;
 import org.hisp.dhis.commons.timer.Timer;
-import org.hisp.dhis.commons.util.TextUtils;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
 import org.hisp.dhis.db.model.Collation;
 import org.hisp.dhis.db.model.Index;
 import org.hisp.dhis.db.model.Logged;
+import org.hisp.dhis.db.model.Table;
 import org.hisp.dhis.db.sql.PostgreSqlBuilder;
 import org.hisp.dhis.db.sql.SqlBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroupSet;
@@ -171,66 +168,92 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
 
   @Override
   public void createTable(AnalyticsTable table) {
-    createTempTable(table);
-    createTempTablePartitions(table);
+    createAnalyticsTable(table);
+    createAnalyticsTablePartitions(table);
+  }
+
+  /**
+   * Drops and creates the given analytics table or table partition.
+   *
+   * @param table the {@link Table}.
+   */
+  private void createAnalyticsTable(Table table) {
+    log.info("Creating table: '{}', columns: '{}'", table.getName(), table.getColumns().size());
+
+    String sql = sqlBuilder.createTable(table);
+
+    log.debug("Create table SQL: '{}'", sql);
+
+    jdbcTemplate.execute(sql);
+  }
+
+  /**
+   * Creates the table partitions for the given analytics table.
+   *
+   * @param table the {@link AnalyticsTable}.
+   */
+  private void createAnalyticsTablePartitions(AnalyticsTable table) {
+    for (AnalyticsTablePartition partition : table.getTablePartitions()) {
+      createAnalyticsTable(partition);
+    }
   }
 
   @Override
   public void createIndex(Index index) {
-    String sql = createIndexStatement(index);
+    log.debug("Creating index: '{}'", index.getName());
 
-    log.debug("Create index: '{}' with SQL: '{}'", index.getName(), sql);
+    String sql = sqlBuilder.createIndex(index);
+
+    log.debug("Create index SQL: '{}'", sql);
 
     jdbcTemplate.execute(sql);
-
-    log.debug("Created index: '{}'", index.getName());
   }
 
   @Override
   public void swapTable(AnalyticsTableUpdateParams params, AnalyticsTable table) {
-    boolean tableExists = partitionManager.tableExists(table.getName());
+    boolean tableExists = tableExists(table.getName());
     boolean skipMasterTable =
-        params.isPartialUpdate() && tableExists && table.getTableType().hasLatestPartition();
+        params.isPartialUpdate() && tableExists && table.getTableType().isLatestPartition();
 
     log.info(
         "Swapping table, master table exists: '{}', skip master table: '{}'",
         tableExists,
         skipMasterTable);
 
-    table.getTablePartitions().stream().forEach(p -> swapTable(p.getTempName(), p.getName()));
+    table.getTablePartitions().stream().forEach(p -> swapTable(p, p.getMainName()));
 
     if (!skipMasterTable) {
-      swapTable(table.getTempName(), table.getName());
+      swapTable(table, table.getMainName());
     } else {
       table.getTablePartitions().stream()
-          .forEach(p -> swapInheritance(p.getName(), table.getTempName(), table.getName()));
-      dropTempTable(table);
+          .forEach(partition -> swapInheritance(partition, table.getName(), table.getMainName()));
+      dropTable(table);
     }
   }
 
   @Override
-  public void dropTempTable(AnalyticsTable table) {
-    dropTableCascade(table.getTempName());
+  public void dropTable(AnalyticsTable table) {
+    dropTable(table.getName());
   }
 
   @Override
-  public void dropTempTablePartition(AnalyticsTablePartition tablePartition) {
-    dropTableCascade(tablePartition.getTempName());
+  public void dropTablePartition(AnalyticsTablePartition tablePartition) {
+    dropTable(tablePartition.getName());
   }
 
   @Override
-  public void dropTableCascade(String tableName) {
-    executeSafely("drop table if exists " + tableName + " cascade");
+  public void dropTable(String name) {
+    executeSilently(sqlBuilder.dropTableIfExistsCascade(name));
   }
 
   @Override
-  public void analyzeTable(String tableName) {
-    executeSafely("analyze " + tableName);
+  public void analyzeTable(String name) {
+    executeSilently(sqlBuilder.analyzeTable(name));
   }
 
   @Override
-  public void vacuumTable(String tableName) {
-    executeSafely("vacuum " + tableName);
+  public void vacuumTable(String name) {
+    executeSilently(sqlBuilder.vacuumTable(name));
   }
 
   @Override
@@ -250,111 +273,36 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
   }
 
   /**
-   * Drops and creates the given analytics table.
+   * Swaps a database table, meaning drops the main table and renames the staging table to become
+   * the main table.
    *
-   * @param table the {@link AnalyticsTable}.
+   * @param stagingTable the staging table.
+   * @param mainTableName the main table name.
    */
-  private void createTempTable(AnalyticsTable table) {
-    StringBuilder sql = new StringBuilder();
-
-    String tableName = table.getTempName();
-    String unlogged = table.isUnlogged() ? "unlogged" : "";
-
-    sql.append("create ").append(unlogged).append(" table ").append(tableName).append(" (");
-
-    for (AnalyticsTableColumn col : table.getAnalyticsTableColumns()) {
-      String dataType = sqlBuilder.getDataTypeName(col.getDataType());
-      String nullable = col.isNotNull() ? " not null" : " null";
-      String collation = col.hasCollation() ? getCollation(col.getCollation().name()) : EMPTY;
-
-      sql.append(col.getName())
-          .append(SPACE)
-          .append(dataType)
-          .append(collation)
-          .append(nullable)
-          .append(",");
-    }
-
-    TextUtils.removeLastComma(sql).append(")");
-
-    log.info("Creating table: '{}', columns: '{}'", tableName, table.getColumnCount());
-    log.debug("Create table SQL: '{}'", sql);
-
-    jdbcTemplate.execute(sql.toString());
+  private void swapTable(Table stagingTable, String mainTableName) {
+    executeSilently(sqlBuilder.swapTable(stagingTable, mainTableName));
   }
 
   /**
-   * Creates the table partitions for the given analytics table.
-   *
-   * @param table the {@link AnalyticsTable}.
-   */
-  private void createTempTablePartitions(AnalyticsTable table) {
-    for (AnalyticsTablePartition partition : table.getTablePartitions()) {
-      createTempTablePartition(table, partition);
-    }
-  }
-
-  /**
-   * Creates the given table partition.
-   *
-   * @param table the {@link AnalyticsTable}.
-   * @param partition the {@link AnalyticsTablePartition}.
-   */
-  private void createTempTablePartition(AnalyticsTable table, AnalyticsTablePartition partition) {
-    String tableName = partition.getTempName();
-    String unlogged = table.isUnlogged() ? "unlogged" : "";
-    List<String> checks = getPartitionChecks(partition);
-
-    StringBuilder sql = new StringBuilder();
-
-    sql.append("create ").append(unlogged).append(" table ").append(tableName).append(" (");
-
-    if (!checks.isEmpty()) {
-      StringBuilder sqlCheck = new StringBuilder();
-      checks.stream().forEach(check -> sqlCheck.append("check (" + check + "), "));
-      sql.append(TextUtils.removeLastComma(sqlCheck.toString()));
-    }
-
-    sql.append(") inherits (").append(table.getTempName()).append(")");
-
-    log.info("Creating partition table: '{}'", tableName);
-    log.debug("Create table SQL: '{}'", sql);
-
-    jdbcTemplate.execute(sql.toString());
-  }
-
-  /**
-   * Swaps a database table, meaning drops the real table and renames the temporary table to become
-   * the real table.
-   *
-   * @param tempTableName the temporary table name.
-   * @param realTableName the real table name.
-   */
-  private void swapTable(String tempTableName, String realTableName) {
-    String[] sqlSteps = {
-      "drop table if exists " + realTableName + " cascade",
-      "alter table " + tempTableName + " rename to " + realTableName
-    };
-
-    executeSafely(sqlSteps, true);
-  }
-
-  /**
-   * Updates table inheritance of a table partition from the temp master table to the real master
+   * Updates table inheritance of a table partition from the staging master table to the main master
    * table.
    *
    * @param partitionTableName the partition table name.
-   * @param tempMasterTableName the temporary master table name.
-   * @param realMasterTableName the real master table name.
+   * @param stagingMasterName the staging master table name.
+   * @param mainMasterName the main master table name.
    */
-  private void swapInheritance(
-      String partitionTableName, String tempMasterTableName, String realMasterTableName) {
-    String[] sqlSteps = {
-      "alter table " + partitionTableName + " inherit " + realMasterTableName,
-      "alter table " + partitionTableName + " no inherit " + tempMasterTableName
-    };
+  private void swapInheritance(Table partition, String stagingMasterName, String mainMasterName) {
+    executeSilently(sqlBuilder.swapParentTable(partition, stagingMasterName, mainMasterName));
+  }
 
-    executeSafely(sqlSteps, true);
+  /**
+   * Indicates if a table with the given name exists.
+   *
+   * @param name the table name.
+   * @return true if a table with the given name exists.
+   */
+  private boolean tableExists(String name) {
+    return !jdbcTemplate.queryForList(sqlBuilder.tableExists(name)).isEmpty();
   }
 
   // -------------------------------------------------------------------------
@@ -362,11 +310,13 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
   // -------------------------------------------------------------------------
 
   /**
-   * Returns a list of table checks (constraints) for the given analytics table partition.
+   * Returns a list of table partition checks (constraints) for the given year and end date.
    *
-   * @param partition the {@link AnalyticsTablePartition}.
+   * @param year the year.
+   * @param endDate the end date.
+   * @return the list of table partition checks.
    */
-  protected abstract List<String> getPartitionChecks(AnalyticsTablePartition partition);
+  protected abstract List<String> getPartitionChecks(Integer year, Date endDate);
 
   /**
    * Populates the given analytics table.
@@ -407,7 +357,7 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
       AnalyticsTableUpdateParams params,
       List<Integer> dataYears,
       List<AnalyticsTableColumn> columns) {
-
+    Calendar calendar = PeriodType.getCalendar();
     List<Integer> years = ListUtils.mutableCopy(dataYears);
     Logged logged = analyticsExportSettings.getTableLogged();
 
@@ -416,7 +366,10 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
     AnalyticsTable table = new AnalyticsTable(getAnalyticsTableType(), columns, logged);
 
     for (Integer year : years) {
-      table.addPartitionTable(year, getStartDate(year), getEndDate(year));
+      List<String> checks = getPartitionChecks(year, getEndDate(calendar, year));
+
+      table.addTablePartition(
+          checks, year, getStartDate(calendar, year), getEndDate(calendar, year));
     }
 
     return table;
@@ -450,8 +403,8 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
     AnalyticsTable table = new AnalyticsTable(getAnalyticsTableType(), columns, logged);
 
     if (hasUpdatedData) {
-      table.addPartitionTable(
-          AnalyticsTablePartition.LATEST_PARTITION, lastFullTableUpdate, endDate);
+      table.addTablePartition(
+          List.of(), AnalyticsTablePartition.LATEST_PARTITION, lastFullTableUpdate, endDate);
       log.info(
           "Added latest analytics partition with start: '{}' and end: '{}'",
           getLongDateString(lastFullTableUpdate),
@@ -511,10 +464,10 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
     return PeriodType.getAvailablePeriodTypes().stream()
         .map(
             pt -> {
-              String column = quote(pt.getName().toLowerCase());
-              return new AnalyticsTableColumn(column, TEXT, prefix + "." + column);
+              String name = pt.getName().toLowerCase();
+              return new AnalyticsTableColumn(name, TEXT, prefix + "." + quote(name));
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -525,12 +478,12 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
   protected List<AnalyticsTableColumn> getOrganisationUnitLevelColumns() {
     return organisationUnitService.getFilledOrganisationUnitLevels().stream()
         .map(
-            lv -> {
-              String column = quote(PREFIX_ORGUNITLEVEL + lv.getLevel());
+            level -> {
+              String name = PREFIX_ORGUNITLEVEL + level.getLevel();
               return new AnalyticsTableColumn(
-                  column, CHARACTER_11, "ous." + column, lv.getCreated());
+                  name, CHARACTER_11, "ous." + quote(name), level.getCreated());
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -557,11 +510,53 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
     return idObjectManager.getDataDimensionsNoAcl(OrganisationUnitGroupSet.class).stream()
         .map(
             ougs -> {
-              String column = quote(ougs.getUid());
+              String name = ougs.getUid();
               return new AnalyticsTableColumn(
-                  column, CHARACTER_11, "ougs." + column, ougs.getCreated());
+                  name, CHARACTER_11, "ougs." + quote(name), ougs.getCreated());
             })
-        .collect(Collectors.toList());
+        .toList();
+  }
+
+  protected List<AnalyticsTableColumn> getAttributeCategoryOptionGroupSetColumns() {
+    return categoryService.getAttributeCategoryOptionGroupSetsNoAcl().stream()
+        .map(
+            cogs -> {
+              String name = cogs.getUid();
+              return new AnalyticsTableColumn(
+                  name, CHARACTER_11, "acs." + quote(name), cogs.getCreated());
+            })
+        .toList();
+  }
+
+  protected List<AnalyticsTableColumn> getAttributeCategoryColumns() {
+    return categoryService.getAttributeDataDimensionCategoriesNoAcl().stream()
+        .map(
+            category -> {
+              String name = category.getUid();
+              return new AnalyticsTableColumn(
+                  name, CHARACTER_11, "acs." + quote(name), category.getCreated());
+            })
+        .toList();
+  }
+
+  /**
+   * Quotes the given relation.
+   *
+   * @param relation the relation to quote, e.g. a table or column name.
+   * @return a double quoted relation.
+   */
+  protected String quote(String relation) {
+    return sqlBuilder.quote(relation);
+  }
+
+  /**
+   * Returns a quoted and comma delimited string.
+   *
+   * @param items the items to join.
+   * @return a string representing the comma delimited and quoted item values.
+   */
+  protected String quotedCommaDelimitedString(Collection<String> items) {
+    return sqlBuilder.quotedCommaDelimitedString(items);
   }
 
   // -------------------------------------------------------------------------
@@ -569,36 +564,16 @@ public abstract class AbstractJdbcTableManager implements AnalyticsTableManager 
   // -------------------------------------------------------------------------
 
   /**
-   * Executes a SQL statement "safely" (without throwing any exception). Instead, exceptions are
-   * simply logged.
+   * Executes a SQL statement silently without throwing any exceptions. Instead exceptions are
+   * logged.
    *
-   * @param sql the SQL statement.
+   * @param sql the SQL statement to execute.
    */
-  private void executeSafely(String sql) {
+  private void executeSilently(String sql) {
     try {
       jdbcTemplate.execute(sql);
     } catch (DataAccessException ex) {
       log.error(ex.getMessage());
-    }
-  }
-
-  /**
-   * Executes a set of SQL statements "safely" (without throwing any exception). Instead, exceptions
-   * are simply logged.
-   *
-   * @param sqlStatements the SQL statements to be executed
-   * @param atomically if true, the statements are executed all together in a single JDBC call
-   */
-  private void executeSafely(String[] sqlStatements, boolean atomically) {
-    if (atomically) {
-      String sql = String.join(";", sqlStatements) + ";";
-      log.debug(sql);
-      executeSafely(sql);
-    } else {
-      for (int i = 0; i < sqlStatements.length; i++) {
-        log.debug(sqlStatements[i]);
-        executeSafely(sqlStatements[i]);
-      }
     }
   }
 }
